[gd_scene load_steps=31 format=2]

[ext_resource path="res://ui/RegularFont.res" type="DynamicFont" id=1]
[ext_resource path="res://ui/TitleContainer-Content.stylebox" type="StyleBox" id=2]
[ext_resource path="res://assets/ui/blue_boxCheckmark.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/blue_boxCross.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/grey_sliderUp.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/grey_sliderHorizontal.png" type="Texture" id=6]
[ext_resource path="res://ui/RegularButtonPressed.stylebox" type="StyleBox" id=7]
[ext_resource path="res://ui/RegularButtonHover.stylebox" type="StyleBox" id=8]
[ext_resource path="res://assets/ui/grey_sliderEnd.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/red_button01.png" type="Texture" id=10]
[ext_resource path="res://ui/TitledPanelContainer.stylebox" type="StyleBox" id=11]
[ext_resource path="res://ui/OptionsMenu.gd" type="Script" id=12]
[ext_resource path="res://assets/background_brown.png" type="Texture" id=13]
[ext_resource path="res://ui/TitleContainerTitle.res" type="DynamicFont" id=14]
[ext_resource path="res://ui/RegularButtonNormal.stylebox" type="StyleBox" id=15]
[ext_resource path="res://assets/ui/return.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/red_button12.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/red_button11.png" type="Texture" id=18]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 190, 4 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 190, 4 )
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxTexture" id=7]
content_margin_left = 32.0
content_margin_right = 32.0
content_margin_top = 10.0
content_margin_bottom = 16.0
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 190, 49 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
expand_margin_top = 4.0

[sub_resource type="StyleBoxTexture" id=8]
content_margin_left = 32.0
content_margin_right = 32.0
content_margin_top = 16.0
content_margin_bottom = 14.0
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 190, 45 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxTexture" id=6]
content_margin_left = 32.0
content_margin_right = 32.0
content_margin_top = 10.0
content_margin_bottom = 16.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 190, 49 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
expand_margin_top = 4.0

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 584.0
custom_constants/separation = 16

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 194.0
margin_bottom = 76.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = ExtResource( 15 )
text = "Return"
icon = ExtResource( 16 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 992.0
margin_bottom = 538.0

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 180.0
margin_right = 812.0
margin_bottom = 446.0
custom_styles/panel = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2"]
margin_top = 16.0
margin_right = 632.0
margin_bottom = 446.0
custom_constants/separation = 8

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer"]
margin_right = 632.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 14 )
text = "Fullscreen"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer"]
margin_top = 34.0
margin_right = 632.0
margin_bottom = 430.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer"]
margin_left = 16.0
margin_top = 20.0
margin_right = 616.0
margin_bottom = 380.0
custom_constants/separation = 22

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 44.0
rect_min_size = Vector2( 600, 0 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 550.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Fullscreen"

[node name="FullscreenCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 554.0
margin_right = 600.0
margin_bottom = 44.0
custom_icons/checked = ExtResource( 3 )
custom_icons/unchecked = ExtResource( 4 )
custom_styles/focus = SubResource( 12 )

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 600.0
margin_bottom = 70.0
custom_styles/separator = SubResource( 9 )

[node name="Volume" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 600.0
margin_bottom = 134.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume"]
margin_top = 9.0
margin_right = 340.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Master Volume"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume"]
margin_left = 344.0
margin_right = 600.0
margin_bottom = 42.0
custom_constants/separation = 0

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume/HBoxContainer2"]
margin_right = 8.0
margin_bottom = 42.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="MasterVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 8.0
margin_right = 198.0
margin_bottom = 42.0
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 1.0
step = 0.01
value = 1.0
scrollable = false

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume/HBoxContainer2"]
margin_left = 198.0
margin_right = 206.0
margin_bottom = 42.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="MasterVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 206.0
margin_right = 256.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 32 )
size_flags_vertical = 0
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_fonts/font = ExtResource( 1 )
text = "50"
align = 2
valign = 1

[node name="Volume3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 600.0
margin_bottom = 198.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume3"]
margin_top = 9.0
margin_right = 340.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Music volume"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume3"]
margin_left = 344.0
margin_right = 600.0
margin_bottom = 42.0
custom_constants/separation = 0

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume3/HBoxContainer2"]
margin_right = 8.0
margin_bottom = 42.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume3/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 8.0
margin_right = 198.0
margin_bottom = 42.0
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 1.0
step = 0.01
value = 1.0
scrollable = false

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume3/HBoxContainer2"]
margin_left = 198.0
margin_right = 206.0
margin_bottom = 42.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="MusicVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume3/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 206.0
margin_right = 256.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 32 )
size_flags_vertical = 0
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_fonts/font = ExtResource( 1 )
text = "50"
align = 2
valign = 1

[node name="Volume2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 600.0
margin_bottom = 262.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume2"]
margin_top = 9.0
margin_right = 340.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Sound Effects Volume"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume2"]
margin_left = 344.0
margin_right = 600.0
margin_bottom = 42.0
custom_constants/separation = 0

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume2/HBoxContainer2"]
margin_right = 8.0
margin_bottom = 42.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="SoundEffectsVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume2/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 8.0
margin_right = 198.0
margin_bottom = 42.0
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 1.0
step = 0.01
value = 1.0
scrollable = false

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume2/HBoxContainer2"]
margin_left = 198.0
margin_right = 206.0
margin_bottom = 42.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="SoundEffectsVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume2/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 206.0
margin_right = 256.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 32 )
size_flags_vertical = 0
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_fonts/font = ExtResource( 1 )
text = "50"
align = 2
valign = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 284.0
margin_right = 600.0
margin_bottom = 288.0
custom_styles/separator = SubResource( 9 )

[node name="ResetProgressButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 310.0
margin_right = 600.0
margin_bottom = 360.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Reset Progress"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume/HBoxContainer2/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume3/HBoxContainer2/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume2/HBoxContainer2/SoundEffectsVolumeSlider" to="." method="_on_SoundEffectsVolumeSlider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/Volume2/HBoxContainer2/SoundEffectsVolumeSlider" to="." method="_on_SoundEffectsVolumeSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/ResetProgressButton" to="." method="_on_ResetProgressButton_pressed"]
